# CS-trading

./: README.md  pyproject.toml  requirements.txt
config/: example.yaml
docs/: buff_endpoints.md  design.md
src/cs_trading/: __init__.py  buff_client.py  cli.py  config.py  csv_writer.py  models.py  scoring.py  tradeup.py
